# greengraph

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  backup.sh  docker-compose.yml  pyproject.toml
config/: postgresql.conf
greengraph/: __init__.py  config.py  database.py  main.py  models.py
greengraph/routes/: __init__.py  graphs.py
greengraph/static/: index.html
init/: 01-init-extensions.sql  02-graph-edge-sync.sql  03-load-iso3166.sql  countries_iso3166_1.txt  regions_iso3166_2.txt
scripts/: backfill_geo_tags.py  generate_iso3166_data.py  ingest_webhose_zip.py
src/greengraph/: __init__.py  chunker.py  cli.py  config.py  db.py  dedup.py  embeddings.py  geo_tagger.py  ingest.py  models.py  retrieve.py
tests/: conftest.py  test_chunker.py  test_config.py  test_embeddings.py  test_graphs.py  test_ingest.py  test_models.py  test_retrieve.py
