[project]
name = "greengraph"
version = "0.1.0"
description = "Context Graph for RAG Retrieval — PostgreSQL + pgvector + Apache AGE"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.50.0",
    "psycopg[binary]>=3.1.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "networkx>=3.0",
]

[project.scripts]
greengraph = "greengraph.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/greengraph"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.8.0",
    "ty>=0.0.1a6",
    "pycountry>=24.6.1",
]

# --- Ruff ---
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "ANN", # flake8-annotations (type hints)
    "S",   # flake8-bandit (security)
    "RUF", # ruff-specific
]
ignore = [
    "S101",   # use of assert (fine in tests)
    "ANN401", # dynamically typed expressions (Any)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN", "S"]
# AGE/pgvector require f-string SQL construction — all inputs are internal, not user-controlled
"src/greengraph/db.py" = ["S608"]
"src/greengraph/ingest.py" = ["S608"]
"src/greengraph/retrieve.py" = ["S608", "E501"]
"src/greengraph/geo_tagger.py" = ["S608"]
"scripts/backfill_geo_tags.py" = ["S608", "ANN"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# --- Pytest ---
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: requires a running PostgreSQL instance with AGE and pgvector",
    "unit: pure unit tests with no external dependencies",
]
addopts = "-v --tb=short"

# --- Coverage ---
[tool.coverage.run]
source = ["src/greengraph"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
